# haskell-aws-lambda

./: .gitignore  Dockerfile.base  README.md  invoke.sh  lambda_function.py  package.sh  purple.txt  red.json  update.sh
builder/: Dockerfile.hslambda  Dockerfile.stackbase  build.sh
test-project/: build.sh  hello-haskell-so.cabal  interact.sh  stack.yaml
test-project/interop/: Interop.hs  Test.hs
test-project/interop/Interop/: AWSLambda.hs
test-project/interop/Interop/AWS/: Lambda.hs
test-project/interop/Interop/AWSLambda/: Internal.hs  TH.hs
test-project/src/: Math.hs
