name:           hello-haskell-so
version:        0.1.0.0
description:    Create an SO using the foreign-lib stanza
homepage:       https://github.com/aztecrex/hello-haskell-so#readme
bug-reports:    https://github.com/aztecrex/hello-haskell-so/issues
author:         Greg Wiley
maintainer:     aztec.rex@jammm.com
copyright:      2018 Greg Wiley
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/aztecrex/hello-haskell-so.git

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      Lib
  other-modules:
      Paths_hello_haskell_so
  default-language: Haskell2010

foreign-library helloFromHaskell
    type:               native-shared
    if os(windows)
      options: standalone

    hs-source-dirs:     interop
    other-modules:      Test
    build-depends:    base
                    , hello-haskell-so
                    , text
                    , bytestring
                    , unordered-containers
                    , aeson
                    , transformers
                    , aws-lambda
    default-extensions:  GeneralizedNewtypeDeriving
                       , DeriveFunctor
    default-language:   Haskell2010
